# django-gpg-keys-manager

./: .gitignore  build.sh  manage.py  pyproject.toml
.github/workflows/: build.yml
api/: __init__.py  app.py
example/: __init__.py  settings.py  urls.py  wsgi.py
gpg_keys/: __init__.py  apps.py  common_views.py  fields.py  forms.py  models.py  urls.py  utils.py  views.py
gpg_keys/locale/fr/LC_MESSAGES/: django.po
gpg_keys/migrations/: 0001_initial.py
gpg_keys/templates/gpg_keys/: base.html  public_keys.html  verify_key.html
